# qbittorrent-smart-queues

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: container.yaml
src/qbittorrent_smart_queues/: __init__.py  __main__.py  guard.py
tests/: test_backup_internet_guard.py  test_candidate_sorting.py  test_cooldown.py  test_generic_defaults.py  test_lifecycle.py  test_logging.py  test_loop_mode.py  test_metadata_bootstrap.py  test_ordering.py  test_policy_engine.py  test_quota_math.py  test_rpi_cooling.py  test_stale_torrent_maintenance.py  test_status_endpoint.py  test_storage_fit.py  test_thermal_gating.py  test_tv_parsing.py  test_udm_parsing.py  test_zero_speed_behavior.py
